# BevyFPGame

./: Cargo.toml
src/: FirstPersonCamera.rs  camera.rs  main.rs  player.rs  world.rs
